--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
            <span class="author-block">
              <a href="https://pointscoder.github.io/">Jiageng Mao</a><sup style="color:#6fbf73;">1</sup><sup>*</sup>,</span>
            <span class="author-block">
-             <a href="https://sites.google.com/site/boyilics/home">Boyi Li</a><sup style="color:#ed4b82;">2</sup><sup>,</sup><sup style="color:#ffac33;">3</sup>,
+             <a href="https://sites.google.com/site/boyilics/home">Boyi Li</a><sup style="color:#ffac33;">2</sup>,
            </span>
            <span class="author-block">
              <a href="https://danielseita.github.io/">Daniel Seita</a><sup style="color:#6fbf73">1</sup>,
            </span>
            <span class="author-block">
-             <a href="https://scholar.google.com.br/citations?user=ow3r9ogAAAAJ&hl=en">Vitor Guizilini</a><sup style="color:#ac33ff">4</sup>,
+             <a href="https://scholar.google.com.br/citations?user=ow3r9ogAAAAJ&hl=en">Vitor Guizilini</a><sup style="color:#ac33ff">3</sup>,
            </span> 
            <span class="author-block">
              <a href="https://yuewang.xyz/">Yue Wang</a><sup style="color:#6fbf73">1</sup>
@@ -73,9 +73,8 @@
 
          <div class="is-size-5 publication-authors">
            <span class="author-block"><sup style="color:#6fbf73;">1</sup>University of Southern California,</span>
-           <span class="author-block"><sup style="color:#ed4b82">2</sup>NVIDIA,</span><br>
-           <span class="author-block"><sup style="color:#ffac33">3</sup>UC Berkeley,</span
-           <span class="author-block"><sup style="color:#ac33ff">4</sup>Toyota Research Institute</span><br>
+           <span class="author-block"><sup style="color:#ffac33">2</sup>UC Berkeley,</span
+           <span class="author-block"><sup style="color:#ac33ff">3</sup>Toyota Research Institute</span><br>
            <span class="author-block"><sup>*</sup>Equal Contribution</span><br>
            <!-- <span class="paper-block"><b style="color:#f41c1c">under review for ICLR 2025</b> </span> -->
         </div>
